--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sweetalert": "^2.1.2",
+    "tsparticles": "^1.33.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
