--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "emailjs-com": "^2.6.4",
+    "html-react-parser": "^1.2.8",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-github-calendar": "^3.0.5",
     "react-icons": "^4.2.0",
     "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.2.0",
