--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
+    "build": "cd client && npm run build",
+    "install-client": "cd client && npm install",
+    "heroku-postbuild": "npm run install-clinet && npm run build",
     "client": "npm start --prefix client",
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
