--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
-    "build": "cd client && npm run build",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-clinet && npm run build",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "client": "npm start --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
