--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
-    "heroku-postbuild": "cd client && npm install && npm run build",
-    "client": "npm start --prefix client",
+    "heroku-postbuild": "cd Client && npm install && npm run build",
+    "client": "npm start --prefix Client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
