--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1",
     "googleapis": "^84.0.0",
     "nodemailer": "^6.6.3",
+    "nodemon": "^2.0.12",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {},
